# vm_sales_auto_sync

./: .gitignore  main.py  pyproject.toml
src/: project_timezone.py
src/app/dtos/: kit_vending_account_dto.py
src/app/ports/: __init__.py  register_vm_sales.py  sales_provider.py  sales_register_data_provider.py
src/app/use_case/: register_sales.py
src/domain/entities/: __init__.py  product.py  sale.py
src/domain/value_objects/: __init__.py  money.py  vm_sales.py
src/domain/value_objects/ids/: __init__.py  product_id.py  vending_machine_id.py
src/infra/: logger.py
src/infra/adapters/kit_vending/: exceptions.py  sales_provider_adapter.py
src/infra/adapters/kit_vending/infra/: drink_data_resolver.py  matrix_data_resolver.py  product_by_matrix_resolver.py  vm_data_resolver.py  vm_data_resolver_adapter.py
src/infra/adapters/moy_sklad/: enums.py  exceptions.py  sales_register_adapter.py
src/infra/adapters/moy_sklad/infra/: product_data_resolver.py  warehouse_data_resolver.py
src/settings/: kit_vending_accounts.py
